# marpaWrapper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile_For_Libmarpa.Unix  README.md  README.txt  marpaWrapper.pc.cmake
bindings/: marpaWrapper.i
cmake/: FindInline.cmake  FindLocaltime_r.cmake  LOCALTIME_R.cmake  NULL_IS_ZEROES.cmake  VA_COPY.cmake
include/: config.h  config.h.in  dateBuilder.h  genericLogger.h  genericStack.h  manageBuf.h  marpaWrapper.h  messageBuilder.h
libmarpa-dist/: Makefile.PL  Makefile.in  configure
libmarpa-dist/win32/: marpa.def
src/: dateBuilder.c  genericLogger.c  genericStack.c  manageBuf.c  marpaWrapper.c  messageBuilder.c
test/: marpaWrapper_test.c
